--- a/frontend/html/checkout.html
+++ b/frontend/html/checkout.html
@@ -522,6 +522,7 @@
     <script type="text/javascript" src="assets/libs/store.everything.min.js"></script>
 
     <script type="text/javascript" src="assets/js/xss.js"></script>
+    <script type="text/javascript" src="assets/js/safty-overrides.js"></script>
     <script type="text/javascript" src="assets/js/utils.js"></script>
     <script type="text/javascript" src="assets/js/storage-wrapper.js"></script>
     <script type="text/javascript" src="assets/js/validate_form_fields.js"></script>
