--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -510,6 +510,7 @@
     <script type="text/javascript" src="assets/js/validator.min.js"></script>
 
     <script type="text/javascript" src="assets/js/xss.js"></script>
+    <script type="text/javascript" src="assets/js/safty-overrides.js"></script>
     <script type="text/javascript" src="assets/js/utils.js"></script>
     <script type="text/javascript" src="assets/js/storage-wrapper.js"></script>
     <script type="text/javascript" src="assets/js/validate_form_fields.js"></script>
